# ts-automation-shared

./: .gitignore  README.md  pyproject.toml
ts_automation_shared/util/: google_auth.py  slack.py
ts_automation_shared/util/io/: bigquery.py  s3.py
util/: google_auth.py  slack.py
